# dcimg-reader

./: .gitignore  CMakeLists.txt  README.md
dcimg_mex/impl/: dcimg_ops.cpp  dcimg_ops.hpp
dcimg_mex/mex_interface/: dcimg_get_size.cpp  dcimg_read_frame.cpp  dcimg_read_frame_range.cpp  util.hpp
dcimgapi/: dcimgapi.h
fiji_plugin/: pom.xml
fiji_plugin/src/main/cpp/: io_bluerose73_fiji_dcimg_DcimgReader.cpp  io_bluerose73_fiji_dcimg_DcimgReader.h
fiji_plugin/src/main/java/io/bluerose73/fiji/dcimg/: DcimgFormat.java  DcimgReader.java  SCIFIOEnabler.java
fiji_plugin/src/main/java/io/github/bluerose73/fiji/dcimg/: DcimgFormat.java  DcimgReader.java  SCIFIOEnabler.java
test/: test_read.cpp
